--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,9 +24,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""
-                               asp-page="/Address">Ostatnio szukane</a>
+                               asp-page="/Address">Zapisane w sesji</a>
                         </li>
                     </ul>
                 </div>
