--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""
-                               asp-page="/Address">Ostatnio szukane</a>
+                               asp-page="/Address">Zapisane w sesji</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Addresses/Index">Ostatnio szukane</a>
                         </li>
                     </ul>
                 </div>
